test/io/sungeun/ioerror.ENOMEM.good
ioerror.chpl:7: error: uncaught error - Cannot allocate memory ENOMEM
